--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Lsong’s Notes
 description: Lsong’s Notes
 theme: just-the-docs
-math: katex
+math: mathjax
 mathjax: true
 
 url: https://notes.lsong.org
